[package]
name = "lfr-typegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_fs = "1.0.13"
clap = { version = "4.4.0", features = ["derive"] }
color-eyre = "0.6.2"
thiserror = "1.0.47"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"

# [workspace]
# members = ["tests"]