[package]
name = "lfr-typegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_fs = "1.0.13"
base64 = "0.21.3"
clap = { version = "4.4.0", features = ["derive"] }
color-eyre = "0.6.2"
serde_json = "1.0.105"
thiserror = "1.0.47"
ureq = { version = "2.7.1", features = ["json"] }
url = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"

# [workspace]
# members = ["tests"]