[package]
name = "lfr-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
reqwest = { version = "0.11.20", optional = true }
ureq = { version = "2.7.1", optional = true }
url ={ version = "2.4.0", optional = true }


[features]
async-client = ["dep:reqwest"]
blocking-client = ["dep:ureq", "dep:url"]
default = ["async-client", "blocking-client"]
